--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,16 @@ excludes=
 file.reference.flatlaf-3.5.2.jar=/Users/fernando/Desktop/Sistema_MagisTV/dist/lib/flatlaf-3.5.2.jar
 file.reference.itext5-itextpdf-5.5.12.jar=/Users/fernando/Desktop/Sistema_MagisTV/dist/lib/itext5-itextpdf-5.5.12.jar
 file.reference.jcalendar-1.4.jar=/Users/fernando/Desktop/Sistema_MagisTV/dist/lib/jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.46-bin_2.jar=/Users/fernando/Desktop/mysql-connector-java-5.1.46-bin 2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-3.5.2.jar}:\
     ${file.reference.itext5-itextpdf-5.5.12.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.46-bin_2.jar}:\
+    ${libs.mySQL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,7 +81,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProyectoEDA
-main.class=proyectoeda.ProyectoEDA
+main.class=Vista.MenuPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
