--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProyectoEDA
+application.vendor=fazef
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/ProyectoEDA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoEDA
+endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.5.2.jar=/Users/fernando/Desktop/Sistema_MagisTV/dist/lib/flatlaf-3.5.2.jar
 file.reference.itext5-itextpdf-5.5.12.jar=/Users/fernando/Desktop/Sistema_MagisTV/dist/lib/itext5-itextpdf-5.5.12.jar
@@ -45,7 +47,10 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-5.1.46-bin_2.jar}:\
-    ${libs.mySQL.classpath}
+    ${libs.mySQL.classpath}:\
+    ${libs.itext5-itextpdf-5.5.12.classpath}:\
+    ${libs.jcalendar-1.4.classpath}:\
+    ${libs.flatlaf-3.5.2.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -85,7 +90,7 @@ main.class=Vista.MenuPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_15
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
