--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,7 +50,10 @@ javac.classpath=\
     ${libs.mySQL.classpath}:\
     ${libs.itext5-itextpdf-5.5.12.classpath}:\
     ${libs.jcalendar-1.4.classpath}:\
-    ${libs.flatlaf-3.5.2.classpath}
+    ${libs.flatlaf-3.5.2.classpath}:\
+    ${libs.flatlaf-3.5.2.jar.classpath}:\
+    ${libs.MyLibraryjcalendar-1.4.classpath}:\
+    ${libs.itext5-itextpdf-5.5.12.jar.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
