--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoEDA
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=src/Referencias/AbsoluteLayout.jar
 file.reference.flatlaf-3.5.2.jar=/Users/fernando/Desktop/Sistema_MagisTV/dist/lib/flatlaf-3.5.2.jar
+file.reference.flatlaf-3.5.2.jar-1=src/Referencias/flatlaf-3.5.2.jar
 file.reference.itext5-itextpdf-5.5.12.jar=/Users/fernando/Desktop/Sistema_MagisTV/dist/lib/itext5-itextpdf-5.5.12.jar
+file.reference.itext5-itextpdf-5.5.12.jar-1=src/Referencias/itext5-itextpdf-5.5.12.jar
 file.reference.jcalendar-1.4.jar=/Users/fernando/Desktop/Sistema_MagisTV/dist/lib/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=src/Referencias/jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.46-bin_2.jar=/Users/fernando/Desktop/mysql-connector-java-5.1.46-bin 2.jar
 includes=**
 jar.compress=false
@@ -53,7 +57,11 @@ javac.classpath=\
     ${libs.flatlaf-3.5.2.classpath}:\
     ${libs.flatlaf-3.5.2.jar.classpath}:\
     ${libs.MyLibraryjcalendar-1.4.classpath}:\
-    ${libs.itext5-itextpdf-5.5.12.jar.classpath}
+    ${libs.itext5-itextpdf-5.5.12.jar.classpath}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.flatlaf-3.5.2.jar-1}:\
+    ${file.reference.itext5-itextpdf-5.5.12.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
